@@ -254,6 +254,9 @@ C-API
 Library
 -------
 
+- Issue #7959: ctypes callback functions are now registered correctly
+  with the cylce garbage collector.
+
 - Issue #5801: removed spurious empty lines in wsgiref.
 
 - Issue #6666: fix bug in trace.py that applied the list of directories
